--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 }
 .title{
     text-align: center;
-    font-size: 60px;
+    font-size: 7vw;
     
 }
 .section_3{
@@ -32,13 +32,14 @@
     width: 100%;
     text-align: center;
     margin-top: 20px;
+    margin-bottom: 20px;
     
 }
 .name{
-    font-size: 40px;
+    font-size: 6vw;
     margin-right: 20px;
     font-weight: 600;
 }
 .bank{
-    font-size: 40px;
+    font-size: 6vw;
 }
