--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,6 @@
     text-align: center;
     margin-top: 20px;
     margin-bottom: 20px;
-    
 }
 .name{
     font-size: 5.5vw;
@@ -41,5 +40,48 @@
     font-weight: 600;
 }
 .bank{
-    font-size: 5.5vw;
+    font-size: 4.5vw;
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.bank_add_m{
+    font-size: 5vw;
+}
+.bank_add_t{
+    font-size: 4vw;
+    color: #8E8EA9;
+}
+.icon{
+    position: absolute;
+    width: 8vw;
+    margin-left: -60px;
+}
+button {
+    outline-color: #ffffff;
+    border-radius: 100px;
+    padding: 4px 10px 4px 10px;
+    background-color: #EAEDFF;
+    color: #091ED2;
 }
