--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@
 button {
     outline-color: #ffffff;
     border-radius: 100px;
-    padding: 10px 10px 10px 10px;
+    padding: 20px;
     background-color: #EAEDFF;
     color: #091ED2;
 }
