--- a/css/style.css
+++ b/css/style.css
@@ -76,16 +76,20 @@
 .icon{
     position: absolute;
     width: 8vw;
-    margin-left: -120px;
+    margin-bottom: -5px;
+    margin-left: -110px;
 }
 button {
     outline-color: #ffffff;
     border-radius: 100px;
-    padding: 20px;
+    padding: 20px 30px 20px 30px;
     background-color: #EAEDFF;
     color: #091ED2;
 }
 
-.close_1 .close_2{
+.close_1{
+    font-size: 8vw;
+}
+.close_2{
     font-size: 8vw;
 }
